# Tugas_Besar_Sekuro

./: README.md
object_detect/: package.xml  setup.py
object_detect/object_detect/: object_detection_node.py
robot_description/: package.xml  setup.py
robot_description/launch/: spawn_robot.launch.py
robot_description/urdf/: my_camera.xacro  my_gazebo.xacro  my_materials.xacro  my_robot.urdf.xacro
