<?xml version="1.0"?>
<package format="3">
  <name>object_detect</name>
  <version>0.0.0</version>
  <description>ROS2 package for object detection using OpenCV</description>
  <maintainer email="alphaduh@todo.todo">alphaduh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>